--- a/src/styles/SongBlock.css
+++ b/src/styles/SongBlock.css
@@ -54,6 +54,7 @@
   margin-top: 1rem;
   padding-top: 1rem;
   border-top: 1px solid rgba(255, 255, 255, 0.2);
+  display: inline-flex;
 }
 
 .song-name {
