--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
-  background-color: #0a0a0a;
+  background-color: #740688;
   color: #ffffff;
 }
 
