--- a/src/styles/MainView.css
+++ b/src/styles/MainView.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100vh;
   overflow: hidden;
-  background-color: #0a0a0a;
+  background-color: #c10202;
   position: relative;
 }
 
