--- a/src/styles/CarouselGrid.css
+++ b/src/styles/CarouselGrid.css
@@ -5,7 +5,7 @@
   overflow: hidden;
   gap: 1rem;
   padding: 1rem;
-  background-color: #9c1010;
+  background: radial-gradient(circle,rgba(255, 0, 89, 1) 15%, rgba(0, 140, 255, 1) 34%, rgba(110, 29, 181, 1) 45%, rgba(255, 140, 0, 1) 61%, rgba(255, 200, 0, 1) 67%, rgba(255, 140, 0, 1) 75%, rgba(110, 29, 181, 1) 91%);
 }
 
 @media (max-width: 768px) {
